code refactor and bug fix with deleting items not related to logged user